# 42sh

./: AUTHORS  Makefile  README.md  meson.build
src/: 42sh.c
src/ast/: ast.c  ast.h
src/eval_ast/: cd_command.c  echo_command.c  eval_ast.c  eval_ast.h  eval_for.c  eval_negation.c  eval_operators.c  eval_pipe.c  eval_redirection.c  eval_until.c  eval_while.c  exec_other_command.c
src/hash_map/: dump.c  hash_map.c
src/io/builddir/meson-logs/: meson-log.txt
src/lexer/: lexer.c  lexer.h  list_lexer.c  memory.c  memory.h  token_lexer.c
src/parser/: parser.c  parser.h  parser_and_or.c  parser_case_clause.c  parser_case_item.c  parser_command.c  parser_compound_list.c  parser_do_group.c  parser_element.c  parser_else_clause.c  parser_funcdec.c  parser_input.c  parser_list.c  parser_pipeline.c  parser_prefix.c  parser_redirection.c  parser_rule_case.c  parser_rule_for.c  parser_rule_if.c  parser_rule_until.c  parser_rule_while.c  parser_separator.c  parser_shell_command.c  parser_simple_command.c
src/pretty_print/: prettyprint.c  prettyprint.h
tests/: run_tests  test.sh
vm_ubuntu/DevOps/IDVOC-public-main/: .gitlab-ci.yml  docker-compose.yml
vm_ubuntu/DevOps/IDVOC-public-main/nginx/: generate_ca_and_certificate.sh
vm_ubuntu/DevOps/IDVOC-public-main/web/: Dockerfile
vm_ubuntu/DevOps/IDVOC-public-main/worker/: Dockerfile
